frontend/src/Login/LoginScreen.css
/* styles.css */

:root {
    --background-color-light: #fff; /* Light mode background color */
    --text-color-light: #333; /* Light mode text color */
    --background-color-dark1: #072140; /* Dark mode background color */
    --background-color-dark2: #333; /* Dark mode background color */
    --text-color-dark: #fff; /* Dark mode text color */
  }
  
  body {
    font-family: Arial, sans-serif;
    background-color: var(--background-color-light);
    color: var(--text-color-light);
    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
  }
  
  .dark-mode {
    background-color: var(--background-color-dark1);
    color: var(--text-color-dark);
  }
  
  form {
    background-color: var(--background-color-light); /* Set light mode background color as default */
    padding: 40px;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 30%;
    max-width: 400px;
    margin-left: 60%;
    margin-top: 10%;
  }
  
  .dark-mode form {
    background-color: var(--background-color-dark2); /* Change background color for dark mode */
  }
  
  input[type="text"],
  input[type="email"],
  input[type="tel"],
  select,
  input[type="radio"] {
    width: 100%;
    padding: 12px;
    margin-bottom: 20px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  
  input[type="submit"] {
    background-color: #4caf50;
    color: white;
    padding: 14px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
  }
  
  input[type="submit"]:hover {
    background-color: #45a049;
  }

  .dark-mode input[type="submit"] {
    background-color: #074802;
  }

  .dark-mode input[type="submit"]:hover {
    background-color: #043001;
  }

  button {
    background-color: #4caf50;
    color: white;
    padding: 14px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
  }

  .dark-mode button {
    background-color: #074802;
  }
  

